testsuite/tests/v1/import/ambiguous_import/test.out
Error: Ambiguous module importation
   ╭─[ <working-dir>/script.lkql:1:1 ]
   │
 1 │ import foo
   │ ─────┬────  
   │      ╰────── This module can be imported from multiple files (<working-dir>/dir_1/foo.lkql & <working-dir>/dir_2/foo.lkql)
───╯
